--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -2,10 +2,22 @@
   link: https://github.com/shenghungKuan/CNN_pokemon_classification
   image: https://cdn.pixabay.com/photo/2016/12/02/02/10/idea-1876659_960_720.jpg
   description: This project is a CNN model that classifies pokemons based on their images. The model is trained on a dataset of 949 pokemons and is able to classify pokemons with hamming loss of 0.2.
+- name: Multi Layer Perceptron
+  link: https://github.com/shenghungKuan/multi-layer-perceptron
+  image: https://cdn.pixabay.com/photo/2023/02/06/21/21/office-7772783_1280.jpg
+  description: This project is an implementation of multi layer perceptron using Pytorch to predict wine quality on 1599 pieces of data with an cross entropy loss of 1.2.
 - name: RISC-V Emulation
   link: https://github.com/shenghungKuan/risc-v-emulation
   image: https://cdn.pixabay.com/photo/2015/01/08/18/25/desk-593327_1280.jpg
   description: This is an emulator in C for a subset of the RISC-V Instruction Set Architecture (ISA). It also includes an implementation of a processor cache simulator for direct mapped and set associative caches.
+- name: Linear Regression
+  link: https://github.com/shenghungKuan/linear-regression
+  image: https://cdn.pixabay.com/photo/2016/11/19/15/32/laptop-1839876_1280.jpg
+  description: This project is an implementation of linear regression with linear regression, Ridge, and Lasso from Sklearn to predict the price of flight prices based on their features. The model is trained on a dataset of 8546 pieces of data and is able to predict the price of flights with a root mean squared error of 3.46.
+- name: Kmeans Clustering
+  link: https://github.com/shenghungKuan/kmeans
+  image: https://cdn.pixabay.com/photo/2017/10/12/22/17/business-2846221_1280.jpg
+  description: This project includes a comparison of Kmeans clustering from Sklearn and from scratch on the same dataset, and an implementation of applying different clustering algorithms on different types of problems and data.
 - name: Number Tool Language
   link: https://github.com/shenghungKuan/NTLang
   image: https://cdn.pixabay.com/photo/2019/05/16/20/15/online-4208112_1280.jpg
